# SHOGUN-AI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  LICENSE  README.md  SHOGUN Hi-Fi UI.html  app.jsx  package-lock.json  package.json  playwright.config.js
.agent/protocols/: permissions.md
.agent/skills/: _index.md
.github/workflows/: ci.yml
browser-extension/: manifest.json  popup.html
browser-extension/src/: background.js  content.js  popup.js
docs/: BROWSER_EXTENSION_PLAN.md  IMPLEMENTATION_PLAN.md  ONBOARDING_DESIGN.md  introduction.mdx  mint.json  openapi.yaml  quickstart.mdx
docs/concepts/: byok.mdx  cost-optimization.mdx  dream-cycle.mdx  pages.mdx  (+1 more)
hifi/: action-map.md  app.jsx  icons.jsx  screens-a.jsx  screens-b.jsx  screens-c.jsx  screens-meetings.jsx  settings-modal.jsx  tokens.css
screens/: l1.jsx  l2.jsx  l3.jsx  l4.jsx  l5.jsx  l6_l7_l8.jsx
scripts/: sync-web-dist.mjs
src/: brain.ts  identity.ts  index.ts  logger.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  memory_store.rs  paths.rs  settings_store.rs
src-tauri/src/capture/: accessibility.rs  mod.rs  pipeline.rs  scheduler.rs
supabase/: schema.sql
tests/: agents.test.ts  brain.test.ts  chunking.test.ts  dream-cycle.test.ts  encryption.test.ts  engine.test.ts  export.test.ts  japanese.test.ts  llm-router.test.ts  pages.test.ts  search.test.ts  security.test.ts  tiered-memory.test.ts  timeline-service.test.ts
ui/: index.html  package-lock.json  package.json  tailwind.config.js
(+119 files in other folders)
